--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "@sitespeed.io/throttle": "^0.5.4",
     "awaitqueue": "^2.1.1",
     "body-parser": "^1.19.0",
-    "colors": "^1.4.0",
-    "debug": "^4.1.1",
+    "events": "^3.2.0",
     "express": "^4.17.1",
-    "heapdump": "^0.3.15",
-    "pidusage": "^2.0.18",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "protoo-server": "^4.0.3",
-    "sctp": "^0.0.19",
-    "symbol-observable": "^1.0.1"
+    "url": "^0.11.0"
   }
 }
